--- a/public/index.html
+++ b/public/index.html
@@ -45,26 +45,7 @@
         </form>
       </section>
 
-      <section id='tweet-id'>
-        <article class="tweet-article">
-          <header>
-            <img src='./images/bird.png'>
-            <label><strong>My name :)</strong></label>
-            <label class="tag">@hiiiiiii</label>
-          </header>
-          <main>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.</p>
-          </main>
-          <footer>
-            <label>10 days ago</label>
-            <div class="icons">
-              <i class="fas fa-heart"></i>
-              <i class="fas fa-flag"></i>
-              <i class="fas fa-retweet"></i>
-            </div>
-
-          </footer>
-        </article>
+      <section id='tweets-container'>
       </section>
     </main>
 
