--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
@@ -31,18 +32,21 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <a class='btn-nav btn-nav-uncliked' id='btn-compose'><i class="far fa-edit"></i>Compose</a>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
 
-      <section class="new-tweet">
+      <section class="new-tweet new-tweet-no-display">
         <h2>Compose Tweet</h2>
         <form action='/tweets' method="POST">
           <textarea name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
+          <!-- <span class="counter"></span> -->
         </form>
+        <div class="message"><p></p></div>
       </section>
 
       <section id='tweets-container'>
