--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,7 @@
         <form action='/tweets' method="POST">
           <textarea name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
-          <span class="counter">140</span>
-          <!-- <span class="counter"></span> -->
+          <span class="counter"></span>
         </form>
         <div class="message"><p></p></div>
       </section>
