--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,10 @@
         <h2>Compose Tweet</h2>
         <form action='/tweets' method="POST">
           <textarea name="text" placeholder="What are you humming about?"></textarea>
-          <input type="submit" value="Tweet">
-          <span class="counter"></span>
+          <div class="footer">
+            <input type="submit" value="Tweet">
+            <span class="counter"></span>
+          </div>
         </form>
         <div class="message"><p></p></div>
       </section>
