--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,94 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
-      <a class='btn-nav btn-nav-uncliked' id='btn-compose'><i class="far fa-edit"></i>Compose</a>
+      <a class="btn-login-register" id='btn-login'>Login</a>
+      <a class="btn-login-register" id='btn-register'>Register</a>
+
+      <a class='btn-loggedin btn-nav btn-nav-uncliked' id='btn-compose'><i class="far fa-edit"></i>Compose</a>
+
     </nav>
+
+    <!-- Begin of Register popup -->
+    <div id="popup_register" class="popupModal popup-display">
+      <div class="popupBoxWrapper">
+        <div class="popupBoxContent">
+          <div class="popup-header">
+            <h3>Register</h3>
+            <p class='btn-cancel'>X</p>
+          </div>
+          <hr>
+          <form action="/register" method="POST">
+            <div class='form-group mb-2'>
+              <label for="firstName">First name:</label>
+              <input class="form-control" type="text" name='firstName' placeholder="First name" style="width: 300px; margin: 1em">
+            </div>
+            <div class='form-group mb-2'>
+              <label for="lastName">Last name:</label>
+              <input class="form-control" type="text" name='lastName' placeholder="Last name" style="width: 300px; margin: 1em">
+            </div>
+            <div class='form-group mb-2'>
+              <label for="email">E-mail:</label>
+              <input class="form-control" type="email" name='email' placeholder="email" style="width: 300px; margin: 1em">
+            </div>
+            <div class='form-group mb-2'>
+              <label for="handle">Handle:</label>
+              <input class="form-control" type="text" name='handle' placeholder="handle" style="width: 300px; margin: 1em">
+            </div>
+            <div class='form-group mb-2'>
+              <label for="password">Password:</label>
+              <input class="form-control" type="password" name='password' placeholder="password" style="width: 300px; margin: 1em">
+            </div>
+            <div class='form-group mb-2'>
+              <label for="passwordConfirm">Confirm Password:</label>
+              <input class="form-control" type="password" name='passwordConfirm' placeholder="Confirm password" style="width: 300px; margin: 1em">
+            </div>
+            <div class='form-group mb-2'>
+              <label for="smallAvatar">Small avatar:</label>
+              <input class="form-control" type="text" name="smallAvatar" placeholder="http://" style="width: 300px; margin: 1em">
+            </div>
+            <div class='form-group mb-2'>
+              <label for="Regularavatar">Regular avatar:</label>
+              <input class="form-control" type="text" name="regulAravatar" placeholder="http://" style="width: 300px; margin: 1em">
+            </div>
+            <div class='form-group mb-2'>
+              <label for="largeAavatar">Large avatar:</label>
+              <input class="form-control" type="text" name="largeAvatar" placeholder="http://" style="width: 300px; margin: 1em">
+            </div>
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+        </div> <!-- end of popupBoxContent -->
+      </div>  <!-- end of popupBoxWrapper -->
+    </div>  <!-- end of popupModal -->
+
+    <!-- Begin of Login popup -->
+    <div id="popup_login" class="popupModal popup-display">
+      <div class="popupBoxWrapper">
+        <div class="popupBoxContent">
+          <div class="popup-header">
+            <h3>Login</h3>
+            <p class='btn-cancel'>X</p>
+          </div>
+          <hr>
+          <form action="/login" method="POST">
+            <div class='form-group mb-2'>
+              <label for="email">E-mail:</label>
+              <input class="form-control" type="email" name='email' placeholder="email" style="width: 300px; margin: 1em">
+            </div>
+            <div class='form-group mb-2'>
+              <label for="handle">Handle:</label>
+              <input class="form-control" type="text" name='handle' placeholder="handle" style="width: 300px; margin: 1em">
+            </div>
+            <div class='form-group mb-2'>
+              <label for="password">Password:</label>
+              <input class="form-control" type="password" name='password' placeholder="password" style="width: 300px; margin: 1em">
+            </div>
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+        </div> <!-- end of popupBoxContent -->
+      </div>  <!-- end of popupBoxWrapper -->
+    </div>  <!-- end of popupModal -->
 
     <!-- Page-specific (main) content here -->
     <main class="container">
