--- a/public/index.html
+++ b/public/index.html
@@ -52,39 +52,39 @@
           <form action="/register" method="POST">
             <div class='form-group mb-2'>
               <label for="firstName">First name:</label>
-              <input class="form-control" type="text" name='firstName' placeholder="First name" style="width: 300px; margin: 1em">
+              <input class="form-control" type="text" name='user[firstName]' placeholder="First name" style="width: 300px; margin: 1em">
             </div>
             <div class='form-group mb-2'>
               <label for="lastName">Last name:</label>
-              <input class="form-control" type="text" name='lastName' placeholder="Last name" style="width: 300px; margin: 1em">
+              <input class="form-control" type="text" name='user[lastName]' placeholder="Last name" style="width: 300px; margin: 1em">
             </div>
             <div class='form-group mb-2'>
               <label for="email">E-mail:</label>
-              <input class="form-control" type="email" name='email' placeholder="email" style="width: 300px; margin: 1em">
+              <input class="form-control" type="email" name='user[email]' placeholder="email" style="width: 300px; margin: 1em">
             </div>
             <div class='form-group mb-2'>
               <label for="handle">Handle:</label>
-              <input class="form-control" type="text" name='handle' placeholder="handle" style="width: 300px; margin: 1em">
+              <input class="form-control" type="text" name='user[handle]' placeholder="handle" style="width: 300px; margin: 1em">
             </div>
             <div class='form-group mb-2'>
               <label for="password">Password:</label>
-              <input class="form-control" type="password" name='password' placeholder="password" style="width: 300px; margin: 1em">
+              <input class="form-control" type="password" name='user[password]' placeholder="password" style="width: 300px; margin: 1em">
             </div>
             <div class='form-group mb-2'>
               <label for="passwordConfirm">Confirm Password:</label>
-              <input class="form-control" type="password" name='passwordConfirm' placeholder="Confirm password" style="width: 300px; margin: 1em">
+              <input class="form-control" type="password" name='user[passwordConfirm]' placeholder="Confirm password" style="width: 300px; margin: 1em">
             </div>
             <div class='form-group mb-2'>
               <label for="smallAvatar">Small avatar:</label>
-              <input class="form-control" type="text" name="smallAvatar" placeholder="http://" style="width: 300px; margin: 1em">
+              <input class="form-control" type="text" name="user[smallAvatar]" placeholder="http://" style="width: 300px; margin: 1em">
             </div>
             <div class='form-group mb-2'>
               <label for="Regularavatar">Regular avatar:</label>
-              <input class="form-control" type="text" name="regulAravatar" placeholder="http://" style="width: 300px; margin: 1em">
+              <input class="form-control" type="text" name="user[regulAravatar]" placeholder="http://" style="width: 300px; margin: 1em">
             </div>
             <div class='form-group mb-2'>
               <label for="largeAavatar">Large avatar:</label>
-              <input class="form-control" type="text" name="largeAvatar" placeholder="http://" style="width: 300px; margin: 1em">
+              <input class="form-control" type="text" name="user[largeAvatar]" placeholder="http://" style="width: 300px; margin: 1em">
             </div>
             <button type="submit">Submit</button>
           </form>
@@ -105,15 +105,15 @@
           <form action="/login" method="POST">
             <div class='form-group mb-2'>
               <label for="email">E-mail:</label>
-              <input class="form-control" type="email" name='email' placeholder="email" style="width: 300px; margin: 1em">
+              <input class="form-control" type="email" name='user[email]' placeholder="email" style="width: 300px; margin: 1em">
             </div>
             <div class='form-group mb-2'>
               <label for="handle">Handle:</label>
-              <input class="form-control" type="text" name='handle' placeholder="handle" style="width: 300px; margin: 1em">
+              <input class="form-control" type="text" name='user[handle]' placeholder="handle" style="width: 300px; margin: 1em">
             </div>
             <div class='form-group mb-2'>
               <label for="password">Password:</label>
-              <input class="form-control" type="password" name='password' placeholder="password" style="width: 300px; margin: 1em">
+              <input class="form-control" type="password" name='user[password]' placeholder="password" style="width: 300px; margin: 1em">
             </div>
             <button type="submit">Submit</button>
           </form>
