--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,15 @@
       <a class="btn-login-register" id='btn-login'>Login</a>
       <a class="btn-login-register" id='btn-register'>Register</a>
 
+      <img alt="avatar">
+      <span class="handle"></span>
+      <a class='btn-loggedin' id='btn-logout'>Logout</a>
+      <!-- <div class='btn-loggedin user'>
+        <img alt="avatar">
+        <span class="handle"></span>
+        <a class='btn-loggedin' id='btn-logout'>Logout</a>
+      </div> -->
       <a class='btn-loggedin btn-nav btn-nav-uncliked' id='btn-compose'><i class="far fa-edit"></i>Compose</a>
-
     </nav>
 
     <!-- Begin of Register popup -->
