--- a/public/index.html
+++ b/public/index.html
@@ -148,6 +148,9 @@
       </section>
 
       <section id='tweets-container'>
+        <div class="global-message">
+          <div class="message"><p></p></div>
+        </div>
       </section>
     </main>
 
