--- a/public/index.html
+++ b/public/index.html
@@ -37,16 +37,10 @@
       <a class="btn-login-register" id='btn-register'>Register</a>
 
       <!-- dropdown -->
-      <div class='btn-loggedin'>
-        <img alt="avatar">
-        <div id='loggedin-options'>
-          <ul>
-            <li>
-              <span class="handle"></span></li>
-            <li>
-              <a id='btn-logout'>Logout</a>
-            </li>
-          </ul>
+      <div class='btn-loggedin dropdown'>
+        <img class="dropdown-btn" alt="avatar">
+        <div class='dropdown-options'>
+          <span class="handle"></span>   <a id='btn-logout'>Logout</a>
         </div>
       </div>
       <a class='btn-loggedin btn-nav btn-nav-uncliked' id='btn-compose'><i class="far fa-edit"></i>Compose</a>
